# pyditto

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: usage.py
pyditto/: __init__.py  ditto.py  options.py
tests/: test_ditto.py  test_options.py
