[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyditto"
version = "1.0.0"
description = "Pythonic interface to the macOS ditto tool."
authors = [ { name = "Vesislav Dimitrov", email = "vesislavdimitrov@gmail.com" } ]
requires-python = ">=3.7"

readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["."]
